fix: input width, hide scrollbar in taglist, update min page width

--- a/src/scss/base/_app.scss
+++ b/src/scss/base/_app.scss
@@ -7,7 +7,7 @@
 body {
 	display: flex;
 	flex-direction: column;
-	min-width: 375px;
+	min-width: 360px;
 	min-height: 100vh;
 	padding-top: 52px;
 	padding-bottom: 82px;
