--- a/src/scss/components/_tag-list.scss
+++ b/src/scss/components/_tag-list.scss
@@ -9,8 +9,12 @@
 		margin: 16px auto 0;
 		overflow-x: auto;
 		scrollbar-width: none;
+
 		&::-webkit-scrollbar {
+			display: none;
 			width: 0;
+			height: 0;
+			-webkit-appearance: none;
 		}
 	}
 
