--- a/src/scss/layout/pages/_page-birthday.scss
+++ b/src/scss/layout/pages/_page-birthday.scss
@@ -19,6 +19,7 @@
 
 	&__input {
 		display: block;
+		width: 100%;
 		padding: 26px 56px 12px 20px;
 		border: none;
 		font-size: 20px;
